Authentication/Authorization, token, ratelimits, upgraded documentation
