# api/mainapp.js
@@ -2,15 +2,19 @@ import express from "express";
 import indexPage from "./index.js";
 import dataPage from "./data.js";
 import homePage from "./homepage.js";
+import loginPage from "./login.js";
 import cors from "cors";
 import swaggerUi from "swagger-ui-express";
 import YAML from "yamljs";
+import { verifyToken } from "./tokenVerification.js";
+import { rateLimiter } from "./ratelimiter.js";
 
 const swaggerDocument = YAML.load("./swagger.yaml");
 const swaggerOptions = {};
 
 const app = express();
 
+app.get("/favicon.ico", (req, res) => res.status(204).end());
 app.use(express.json());
 app.use(cors());
 
@@ -22,7 +26,8 @@ app.use(
 
 app.use("/", homePage);
 app.use("/index", indexPage);
-app.use("/data", dataPage);
+app.use("/login", loginPage);
+app.use("/data", verifyToken, rateLimiter, dataPage);
 
 app.use((req, res) => {
   res.status(404).json({ Error: "Page not found" });
